--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         TM
-version:      1.24
+version:      1.25
 version_from: lib/TM.pm
 installdirs:  site
 requires:
@@ -16,12 +16,14 @@ requires:
     Parse::RecDescent:             1.94
     Parse::Yapp::Driver:           1.05
     Pod::Usage:                    1.16
+    Term::ReadLine:                1.01
     Test::Deep:                    0.093
     Test::More:                    0.47
     Test::Pod:                     1
     URI::Escape:                   3.22
     URI::file:                     4.14
     XML::LibXML:                   1.58
+    XML::Simple:                   2.13
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30_01
