--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         TM
-version:      1.41
-version_from: lib/TM.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                TM
+version:             1.42
+abstract:            Topic Maps, Base Class
+license:             ~
+author:              
+    - Robert Barta <drrho@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     BerkeleyDB:                    0.26
     Class::Trait:                  0.22
     Config::General:               2.26
@@ -25,6 +28,6 @@ requires:
     XML::LibXML:                   1.58
     XML::Simple:                   2.13
     XML::Writer:                   0.602
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
