Import of DRRHO/TM-1.52 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.52
gitpan-cpan-path:         DRRHO/TM-1.52.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               TM
-version:            1.51
+version:            1.52
 abstract:           Topic Maps, Base Class
 author:
     - Robert Barta <drrho@cpan.org>
@@ -27,6 +27,7 @@ requires:
     Test::Deep:           0.093
     Test::More:           0.47
     Test::Pod:            1
+    Text::CSV:            ~
     URI:                  1.35
     XML::LibXML:          1.58
     XML::Simple:          2.13
